fix spacing on buttons to look better in windows

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -236,7 +236,7 @@ input {
 }
 
 #chat-input {
-  width: 681px;
+  width: 679px;
 }
 
 #chat-media-button {
